make sure itests run in desired order; use exec plugin, rather than arquillian plugin, in pom to start as7 standalone instance; various minor tweaks; turn down some logging to make log less cluttered